--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simplechat</title>
+    <title>Simple Chat</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,33 @@
   </head>
 
   <body>
-    <%= yield %>
+  	<nav class="navbar navbar-light bg-faded">
+  		<a href="/" class="navbar-brand">Simple Chat</a>
+  		<ul class="nav navbar-nav">
+  			<% if current_user %>
+  			<li class="nav-item">
+  				<%= link_to "Log out #{current_user.email}", logout_path, method: 'delete', class: "nav-link" %>
+  			</li>
+  			<% else%>
+  			<li class="nav-item">
+  				<%= link_to "Create An Account", new_user_path, class: "nav-link" %>
+  			</li>
+  			<li class="nav-item">
+  				<%= link_to "Log In", new_session_path, class: "nav-link" %>
+  			</li>
+  			<% end %>
+  		</ul>
+  	</nav>
+  	<% unless flash.empty? %>
+  		<% flash.each do |key,value|%>
+  		<div class="alert alert-warning"><%= value %></div>
+  		<% end %>
+  	<% end %>
+
+  	<div class="container">
+  		
+  		<%= yield %>	
+  	</div>
+    
   </body>
 </html>
