--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
    <nav>
     <div class="nav-wrapper container">
-      <a href="#" class="brand-logo">Simplechat</a>
+      <a href="<%= root_path %>" class="brand-logo">Simplechat</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
       	<% if current_user %>
 				<li class="nav-item">
