--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Your message incoming</h1>
 <%= link_to "New Message", new_user_message_path(current_user), class: "btn btn-secondary" %>
-<%= link_to "Add Friends", alluser_path, class: "btn btn-secondary" %>
+<%= link_to "Add Friends", friends_path, class: "btn btn-secondary" %>
 <%= link_to "Sent Messages", sent_path, class: "btn btn-secondary" %>
 <div>
 	<table class="table">
