--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
       	<% if current_user %>
 				<li class="nav-item">
-					<%= link_to "Log out #{current_user.email}", logout_path, method: 'delete', class: "nav-link" %>
+					<%= link_to "Log out #{current_user.email}", logout_path,  class: "nav-link" %>
 				</li>
 				<% else%>
 				<li class="nav-item">
