--- a/app/views/users/sent.html.erb
+++ b/app/views/users/sent.html.erb
@@ -3,14 +3,18 @@
 	<table class="table">
 	<thead class="thead thead-default">
 		<tr>
+			<th>User</th>
+			<th>Date</th>
 			<th>Message</th>
 			<th>Image</th>
-			<th>Time</th>
+			<th>Status</th>
 		</tr>
 	</thead>
 	<tbody>
 		<% @messages.each do |message| %>
 		<tr>
+			<td><%= User.find_by_id(message.recipient_id).name %></td>
+			<td><%= time_ago_in_words message.created_at %></td>
 			<td><%= message.title %></td>
 			<td><%= image_tag message.image_url.to_s if message.image? %></td>
 			<% if message.read? %>
