--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,5 +18,36 @@
 		<%= f.label :password %>
 		<%= f.password_field :password, class: 'form-control' %>
 	</div>
+
+	<fb:login-button 
+	scope="public_profile,email"
+	onlogin="checkLoginState();">
+	</fb:login-button>
 	<%= f.submit "Create Account", class: 'btn btn-secondary' %>
 <% end %>
+
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1904684199776605',
+      cookie     : true,
+      xfbml      : true,
+      version    : 'v2.8'
+    });
+    FB.AppEvents.logPageView();   
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+
+   function checkLoginState() {
+  FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+  });
+}
+</script>
