--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,10 +19,7 @@
 		<%= f.password_field :password, class: 'form-control' %>
 	</div>
 
-	<fb:login-button 
-	scope="public_profile,email"
-	onlogin="checkLoginState();">
-	</fb:login-button>
+	 <a class="btn waves-effect waves-light" href="/auth/facebook">Login with facebook</a>
 	<%= f.submit "Create Account", class: 'btn btn-secondary' %>
 <% end %>
 
