Update email functional!

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
   <body>
@@ -13,7 +14,11 @@
     <div class="nav-wrapper container">
       <a href="<%= root_path %>" class="brand-logo">Simplechat</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-      	<% if current_user %>
+				<% if current_user %>
+			<li class="nav-item">
+			 <%= current_user_img %> 
+			</li>
+      
 				<li class="nav-item">
 					<%= link_to "Log out #{current_user.email}", logout_path,  class: "nav-link" %>
 				</li>
